# img-encryptor-be

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/backend/src/config/: database.rs  parameter.rs
crates/backend/src/error/: api_error.rs  keypair_error.rs  mod.rs
crates/backend/src/handler/: master_pk.rs
crates/backend/src/routes/: master_pk.rs  mod.rs  root.rs
crates/backend/src/service/: master_pk_service.rs  mod.rs
crates/backend/src/state/: mod.rs
crates/cli/: Cargo.toml
crates/cli/corelib/: Cargo.toml
crates/cli/corelib/src/: lib.rs  security.rs
crates/cli/src/: main.rs
crates/local-client/: Cargo.toml
crates/local-client/src/: main.rs
