[package]
name = "img-encryptor-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corelib = {path = "corelib"}
dotenv = "0.15.0"
base64 = {version = "0.21.2", default-features = false }
p256 = {version = "0.13.2", features = ["std", "arithmetic", "ecdh"], default-features = false }
rand_core = {version = "0.6.4", default-features = false }
aes = {version = "0.8.3"}
clap = { version = "4.4.6", features = ["derive", "error-context", "usage", "suggestions", "color"] }
image = { version = "0.24.7", features = ["bmp", "gif", "jpeg", "png", "tga", "webp"] }
data-encoding = {version= "2.4.0", features = ["alloc"]}
